tests/success/variasVarYMetodos.tds
bool esMenor;
integer min,max;
integer calcMax (integer min,integer max){
    return min;
}
void toString() {

}