tests/fail/test-neg-invChar02.tds
integer x;
integer y;
bool sum(integer a, integer b){
  integer result;
  result= a + b;
  return result;
}.